# dealias

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  dealias_plot.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  release_to_pypi.yml  unit-testing.yml
example/: dealias_plot.py  qdealias.pbs
examples/: unravel_tutorial.ipynb
ravel/: continuity.py  dealias.py
tests/: test_unravel.py
unravel/: __init__.py  __main__.py  cfg.py  continuity.py  core.py  dealias.py  debug.py  deprecated.py  filtering.py  find_reference.py  initialisation.py  obsolete.py  odim.py  zhang_multipass.py
unravel/.ipynb_checkpoints/: dealias-checkpoint.py
unravel/src/: check.f90
zhang/: continuity.py  dealias.py  filtering.py  find_reference.py  initialisation.py  utils.py
