[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unravel"
version = "1.4.0"
description = "A dealiasing technique for Doppler radar velocity."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Valentin Louf", email = "valentin.louf@bom.gov.au"}
]
keywords = ["radar", "weather", "meteorology", "dealiasing", "Doppler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numba",
    "numpy",
    "xarray",
    "pyodim",
    "dask",
    "arm_pyart",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist",
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/vlouf/dealias"
Documentation = "https://github.com/vlouf/dealias#readme"
Repository = "https://github.com/vlouf/dealias"
Issues = "https://github.com/vlouf/dealias/issues"

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests", "*.tests", "*.tests.*"]

# Coverage configuration
[tool.coverage.run]
source = ["unravel"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]
relative_files = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=unravel --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.tox
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true